[gd_scene load_steps=2 format=3 uid="uid://cjino6nlrygip"]

[ext_resource type="Script" path="res://scripts/StartMenu.gd" id="1_5vhx2"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_5vhx2")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(288, 192)
offset_right = 288.0
offset_bottom = 192.0
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="ResetButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 20)
offset_left = 204.0
offset_top = 5.0
offset_right = 285.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 6
text = "Clear Save"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 277.0
offset_bottom = 181.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(266, 170)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "What Remains In Sleep"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Start"

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Controls"

[node name="ViewEndings" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Endings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Quit"

[node name="ControlsPanel" type="ColorRect" parent="CenterContainer"]
visible = false
layout_mode = 2
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="Label" type="Label" parent="CenterContainer/ControlsPanel"]
layout_mode = 1
offset_left = -131.0
offset_top = -77.0
offset_right = 135.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 7
text = "Controls:

- Move: WASD / Arrow Keys
- Interact: E / Enter
- Quit game: Esc 

‚ö†Ô∏è Warning: Pressing Esc will quit the game and all unsaved progress will be lost.

üíæ Endings are automatically saved at the end of each game completion."
autowrap_mode = 2

[node name="Back" type="Button" parent="CenterContainer/ControlsPanel"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 72.0
offset_top = 68.0
offset_right = 157.0
offset_bottom = 98.0
scale = Vector2(0.8, 0.8)
text = "<---"

[node name="EndingsPanel" type="ColorRect" parent="."]
visible = false
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="EndingsPanel"]
layout_mode = 0
offset_right = 287.0
offset_bottom = 193.0

[node name="Control2" type="Control" parent="EndingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="EndingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Unlocked Endings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="EndingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="EndingsList" type="ItemList" parent="EndingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
theme_override_font_sizes/font_size = 6

[node name="Control3" type="Control" parent="EndingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="CloseEndings" type="Button" parent="EndingsPanel"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
offset_left = 216.0
offset_top = 165.0
offset_right = 301.0
offset_bottom = 192.0
scale = Vector2(0.8, 0.8)
text = "<---"

[node name="music_player" type="AudioStreamPlayer2D" parent="."]
attenuation = 0.307786

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ViewEndings" to="." method="_on_view_endings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/ControlsPanel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="EndingsPanel/CloseEndings" to="." method="_on_close_endings_pressed"]
